--- a/style.scss
+++ b/style.scss
@@ -4,7 +4,7 @@ $font-roboto: "Roboto", sans-serif;
 
 body {
   .wrapper {
-    width: 75%;
+    width: 80%;
     display: block;
     margin: auto;
     text-align: center;
@@ -53,6 +53,7 @@ header {
       font-weight: bold;
       font-size: 1.9vw;
     }
+
     a {
       text-decoration: none;
       cursor: pointer;
@@ -85,7 +86,7 @@ header {
     font-family: $h5-font-cursive;
     text-align: center;
     font-size: 3.75vw;
-    margin-bottom: 4vh;
+    margin-bottom: 2%;
   }
 
   h1 {
@@ -117,8 +118,8 @@ header {
     font-family: $font-montserrat;
     display: block;
     margin: auto;
-    margin-top: 6vh;
-    margin-bottom: 6vh;
+    margin-top: 3%;
+    margin-bottom: 8%;
     width: 8.38vw;
     height: 4.3vh;
     cursor: pointer;
@@ -132,6 +133,7 @@ header {
     display: block;
     margin: auto;
     font-size: 0;
+    margin-top: 5.5%;
 
     .second-row {
       display: inline-block;
@@ -144,7 +146,7 @@ header {
       text-align: left;
       color: #ffffff;
       padding-top: 1.2vh;
-      margin: 10vh 1.5vw 0 1.8vw;
+      margin: 0 1.5% 0 1.8%;
       cursor: pointer;
 
       h4 {
@@ -163,15 +165,15 @@ header {
   }
 }
 
-// @media screen  and ( min-width: 1475px ){
-//   .second-row {
-//     width: 12vw;
-//   }
+@media screen and (max-width: 1669px) {
+  header input {
+    margin-bottom: 14%;
+  }
 
-//   header input {
-//     margin-bottom: 11vh;
-//   }
-// }
+  // header input {
+  //   margin-bottom: 11vh;
+  // }
+}
 
 .about {
   text-align: center;
@@ -181,7 +183,7 @@ header {
   .wrapper {
     a {
       display: inline-block;
-      width: 30%;
+      width: 25%;
       height: 27%;
       margin-right: 2vw;
       cursor: pointer;
@@ -267,7 +269,7 @@ header {
     p {
       width: 52vw;
       font-family: $font-roboto;
-      font-size: 0.97vw;
+      font-size: 0.78vw;
       color: #999999;
       display: block;
       margin: auto;
@@ -279,7 +281,7 @@ header {
 }
 
 .numbers {
-  display: block;
+  // display: block;
   background-color: #95e1d3;
   height: 28vh;
   margin-bottom: 11.24vh;
@@ -299,20 +301,23 @@ header {
       top: 50%;
       transform: translateY(-50%);
       border-left: 1px solid rgba(255, 255, 255, 0.2);
-      height: 271px;
+      height: 28vh;
       width: 1px;
+    }
+    .vertical:first-child {
+      padding-left: 0px;
     }
   }
 
-  .row div {
+  .row > div {
     display: inline-block;
     color: white;
+    font-family: $font-montserrat;
     width: 14%;
     text-align: center;
-    padding: 0 1.6vw 0 1.6vw;
+    padding: 0 2% 0 2%;
 
     h6 {
-      font-family: $font-montserrat;
       font-size: 3.75vw;
       font-weight: bold;
       margin-bottom: 3.1vh;
@@ -320,15 +325,14 @@ header {
 
     p {
       font-size: 0.74vw;
-      font-family: $font-montserrat;
     }
   }
 }
 
 .services {
   text-align: center;
-  margin-top: 11.5vh;
-  margin-bottom: 11.5vh;
+  margin-top: 4%;
+  margin-bottom: 4%;
 
   .wrapper {
     h5 {
@@ -358,33 +362,27 @@ header {
       }
     }
 
-    .line-red {
-      display: block;
-      margin: auto;
-      background-color: #f7adad;
-      width: 4vw;
-      height: 0.3vh;
-      margin-top: 4vh;
-      margin-bottom: 6.8vh;
-    }
-
     div {
       display: inline-block;
       text-align: left;
+
+      // >div {
+      //   display: inline-block;
+      // }
 
       h3 {
         font-family: $font-montserrat;
         font-size: 0.73vw;
         font-size: bold;
         color: #333333;
-        margin-bottom: 2vh;
-        margin-top: 2vh;
-        margin-left: 1vw;
+        margin-bottom: 5%;
+        margin-top: 5%;
+        margin-left: 5%;
       }
 
       p {
         font-family: $font-roboto;
-        font-size: 0.7vw;
+        font-size: 0.78vw;
         color: #999999;
         line-height: 1.6;
         margin-bottom: 3vh;
@@ -397,20 +395,29 @@ header {
         width: 1.7vw;
         height: 3.3vh;
         margin-top: 2vh;
-        margin-right: 1vw;
-        margin-left: 2vw;
+        margin-right: 0.5vw;
+        margin-left: 3vw;
         vertical-align: top;
       }
     }
 
     .horizontal-line {
-      width: 85%;
+      width: 80%;
       height: 1px;
       border-bottom: 1px solid #f2f2f2;
       margin-bottom: 2vh;
     }
   }
 }
+
+// @media screen and (max-width: 1293px) {
+//   div {
+//     width: 60%;
+//   }
+//   .horizontal-line {
+//     width: 70%;
+//   }
+// }
 
 .design {
   background-image: url("./images/layer_mountains.jpg");
@@ -451,16 +458,16 @@ header {
     div img {
       display: block;
       margin: auto;
-      margin-top: 5%;
+      margin-top: 4.7%;
       padding-left: 7%;
     }
   }
 }
 
 .weDo {
-  height: 80vh;
+  // height: 80vh;
   text-align: center;
-  padding-top: 12vh;
+  padding-top: 4vh;
   margin-bottom: 10vh;
 
   .wrapper {
@@ -493,7 +500,7 @@ header {
     p {
       width: 52vw;
       font-family: $font-roboto;
-      font-size: 0.97vw;
+      font-size: 0.78vw;
       color: #999999;
       display: block;
       margin: auto;
@@ -557,10 +564,10 @@ header {
           border-top: none;
 
           p {
-            padding: 0 15px 0 15px;
+            padding: 0 10% 0 3.5%;
             font-style: italic;
             font-size: 15px;
-            line-height: 1.6;
+            line-height: 1.7;
             width: 29vw;
             margin-bottom: 2vh;
             margin-top: 2vh;
@@ -570,11 +577,11 @@ header {
         }
         // .custom-scroll {
         //   overflow: auto;
+        //   position: relative;
 
         // }
         ::-webkit-scrollbar {
           width: 0.6vw;
-          height: 9vh;
         }
 
         ::-webkit-scrollbar-track {
@@ -602,18 +609,11 @@ header {
   background-color: #f8f8f8;
   padding: 3.65vw 0;
 
-  // height: 33vh;
-  // margin-bottom: 12vh;
-  // text-align: center;
-  // position: relative;
-
   .wrapper {
     .first {
       width: auto;
       transform: rotate(90deg);
     }
-    // display: inline-block;
-    // transform: translateY(50%);
 
     div,
     a {
@@ -636,7 +636,7 @@ header {
 
     .third {
       width: 60%;
-      // padding-right: 40px;
+      padding-right: 0px;
 
       h5 {
         font-family: $h5-font-cursive;
@@ -644,7 +644,7 @@ header {
         color: #333333;
         font-style: normal;
         position: relative;
-        padding-left: 6.77vw;
+        padding-left: 7vw;
 
         &::after {
           content: "";
@@ -652,7 +652,6 @@ header {
           left: 3.125vw;
           right: 0;
           bottom: 15px;
-          // margin: 0 auto;
           width: 60px;
           height: 3px;
           background-color: #f38181;
@@ -708,13 +707,6 @@ header {
         height: 3px;
         background-color: #f38181;
       }
-    }
-
-    .line-red {
-      background-color: #f7adad;
-      width: 4vw;
-      height: 0.3vh;
-      margin-top: 4.02vh;
     }
 
     p {
@@ -865,104 +857,108 @@ header {
 }
 
 .wallpaper {
+  width: 100%;
   font-size: 0;
   margin-bottom: 90px;
 
-  > div {
+  .first,
+  .second{
     display: inline-block;
-    width: 25%;
+    width: 50%;
 
-    > a {
-      background-repeat: no-repeat;
-      background-size: cover;
-      display: block;
-      width: 100%;
-      padding-top: 81%;
-      height: 0;
-      position: relative;
-
-      > img {
-        position: absolute;
-        left: 50%;
-        top: 50%;
-        transform: translate(-50%, -50%);
-      }
+    .left,
+    .left-big,
+    .right {
+      display: inline-block;
+      width: 50%;
+      height: 50%;
+      vertical-align: top;
     }
-  }
 
-  .first {
-    :first-child {
-      background-image: url("images/surf.jpg");
+    .top,
+    .bottom {
+      width: 100%;
+      height: 100%;
+      cursor: pointer;
+      position: relative;
+      box-sizing: border-box;
 
-      &:hover {
-        background-image: linear-gradient(0deg, #f0e290da 0%, #e98b89da 100%),
-          url("images/surf.jpg");
-      }
-      &:hover div {
+      &:hover .overlay {
         display: block;
       }
     }
+     
 
-    :last-child {
-      background-image: url("images/bridge.jpg");
+    img {
+      width: 100%;
+      height: auto;
+    }
 
-      &:hover {
-        background-image: linear-gradient(0deg, #f0e290da 0%, #e98b89da 100%),
-          url("images/bridge.jpg");
+    .left-big {
+      height: 100%; 
+      width: 50%;
+      box-sizing: border-box;
+      cursor: pointer;
+      position: relative;
+
+      &:hover .overlay {
+        display: block;
+      }
+    } 
+    
+    .overlay {
+      position: absolute;
+      left:50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+      display: none;
+      background-image: linear-gradient(0deg, #f0e290da 0%, #e98b89da 100%);
+      width: 100%;
+      min-height: 100%;
+      text-align: center;
+  
+      img {
+        position: absolute;
+        left: 50%;
+        top: 45%;
+        transform: translate(-50%, -45%);
+        width: auto;
+      }
+  
+      h3 {
+        font-size: 14px;
+        font-family: $font-montserrat;
+        color: #ffffff;
+        margin-top: 200px;
+      }
+  
+      h2 {
+        color: #ffffff;
+        font-family: $font-roboto;
+        font-size: 15px;
+        font-style: italic;
+        padding-top: 10px;
       }
     }
   }
 
-  .second {
-    :first-child {
-      background-image: url("images/architecture.jpg");
+  
+   // > a {
+    //   background-repeat: no-repeat;
+    //   background-size: cover;
+    //   display: block;
+    //   width: 100%;
+    //   padding-top: 81%;
+    //   height: 0;
+    //   position: relative;
+    //   box-sizing: border-box;
 
-      &:hover {
-        background-image: linear-gradient(0deg, #f0e290da 0%, #e98b89da 100%),
-          url("images/architecture.jpg");
-      }
-    }
-    :last-child {
-      background-image: url("images/architecture_2.jpg");
-
-      &:hover {
-        background-image: linear-gradient(0deg, #f0e290da 0%, #e98b89da 100%),
-          url("images/architecture_2.jpg");
-      }
-    }
-  }
-
-  .third {
-    > a {
-      background-image: url("images/sea.jpg");
-      padding-top: 162%;
-
-      &:hover {
-        background-image: linear-gradient(0deg, #f0e290da 0%, #e98b89da 100%),
-          url("images/sea.jpg");
-      }
-    }
-  }
-
-  .fourth {
-    :first-child {
-      background-image: url("images/architecture_3.jpg");
-
-      &:hover {
-        background-image: linear-gradient(0deg, #f0e290da 0%, #e98b89da 100%),
-          url("images/architecture_3.jpg");
-      }
-    }
-
-    :last-child {
-      background-image: url("images/arcitecture_4.jpg");
-
-      &:hover {
-        background-image: linear-gradient(0deg, #f0e290da 0%, #e98b89da 100%),
-          url("images/arcitecture_4.jpg");
-      }
-    }
-  }
+      // >img {
+      //   position: absolute;
+      //   left: 50%;
+      //   top: 50%;
+      //   transform: translate(-50%, -50%);
+      // }
 }
 
 .slides2 {
@@ -1140,7 +1136,7 @@ header {
     h5 {
       font-family: $h5-font-cursive;
       font-size: 1.25vw;
-      padding-top: 90px;
+      padding-top: 4.68vw;
     }
 
     h2 {
@@ -1149,7 +1145,7 @@ header {
       font-weight: bold;
       position: relative;
       line-height: 1.6;
-      padding-bottom: 50px;
+      padding-bottom: 2.6vw;
 
       &::after {
         content: "";
@@ -1209,8 +1205,8 @@ header {
           text-align: center;
           top: 41%;
           left: -2%;
-          width: 60px;
-          height: 70px;
+          width: 3.125vw;
+          height: 3.64vw;
           background: #95e1d3;
 
           h4 {
@@ -1303,6 +1299,7 @@ footer {
 
   .wrapper {
     text-align: left;
+    width: 75%;
 
     > div {
       vertical-align: top;
@@ -1313,7 +1310,7 @@ footer {
 
     .left {
       display: inline-block;
-      margin-right: 2vw;
+      margin-right: 3%;
       width: 40%;
 
       h2 {
@@ -1393,10 +1390,11 @@ footer {
     .center {
       display: inline-block;
       width: 30%;
+      margin-left: 2%;
 
       a {
         > div {
-          padding: 1.5vw 0 1.6vw 1.3vw;
+          padding: 1.5vw 0 1.6vw 2vw;
           display: inline-block;
           vertical-align: top;
           width: 60%;
@@ -1432,8 +1430,16 @@ footer {
 
     .right {
       display: inline-block;
-      width: 25%;
+      width: 20%;
       margin-left: 1.45vw;
+      position: relative;
+
+      .vieta {
+        position: absolute;
+        left: 0px;
+        top: 0;
+        transform: translateX(15%);
+      }
 
       h3 {
         color: #333333;
@@ -1447,12 +1453,16 @@ footer {
         font-family: $font-roboto;
         font-style: italic;
         color: #333333;
-        padding-top: 1.05vw;
+        margin-top: 10%;
       }
 
-      img {
-        max-width: 4.68vw;
-      }
+      // .picture {
+      //   position: absolute;
+      // }
+
+      // img {
+      //   max-width: 4.68vw;
+      // }
     }
 
     .bottom p {
