--- a/style.css
+++ b/style.css
@@ -30,14 +30,14 @@ header {
   background-repeat: no-repeat;
   background-size: cover;
   background-size: 100% 100%;
-  height: 100vh;
+  height: auto;
   color: white;
 }
 
 header nav:first-child {
   display: block;
   font-size: 0;
-  margin: 0 auto 12vh auto;
+  margin: 0 auto 7% auto;
   width: 70%;
   padding-top: 3vh;
 }
@@ -91,7 +91,7 @@ header h1 {
   font-weight: bold;
   text-align: center;
   position: relative;
-  padding-bottom: 5vh;
+  padding-bottom: 2%;
 }
 
 header h1::after {
@@ -131,6 +131,7 @@ header nav:last-child {
   margin: auto;
   font-size: 0;
   margin-top: 5.5%;
+  padding-bottom: 2%;
 }
 
 header nav:last-child .second-row {
@@ -166,12 +167,32 @@ header nav:last-child .second-row:hover {
   header input {
     margin-bottom: 14%;
   }
+  header nav:first-child {
+    padding-top: 43.5h;
+    margin-bottom: 9%;
+  }
+}
+
+@media screen and (max-width: 880px) {
+  header input {
+    margin-bottom: 14%;
+    width: 7vw;
+    height: 3vh;
+  }
+}
+
+@media screen and (max-width: 680px) {
+  header input {
+    margin-bottom: 14%;
+    width: 8vw;
+    height: 3vh;
+  }
 }
 
 .about {
   text-align: center;
-  margin-top: 13.9vh;
-  margin-bottom: 13.9vh;
+  margin-top: 12vh;
+  margin-bottom: 12vh;
 }
 
 .about .wrapper a {
@@ -246,13 +267,6 @@ header nav:last-child .second-row:hover {
   background-color: #f38181;
 }
 
-.about .wrapper .line-red {
-  background-color: #f7adad;
-  width: 4vw;
-  height: 0.3vh;
-  margin-top: 4.02vh;
-}
-
 .about .wrapper p {
   width: 52vw;
   font-family: "Roboto", sans-serif;
@@ -263,6 +277,27 @@ header nav:last-child .second-row:hover {
   line-height: 1.6;
   margin-top: 3.72vh;
   margin-bottom: 8.98vh;
+}
+
+@media screen and (max-width: 1220px) {
+  .about {
+    margin-top: 8vh;
+    margin-bottom: 8vh;
+  }
+}
+
+@media screen and (max-width: 780px) {
+  .about {
+    margin-top: 6vh;
+    margin-bottom: 6vh;
+  }
+  .about .wrapper h2 {
+    padding-bottom: 30px;
+  }
+  .about .wrapper p {
+    margin-top: 1.5vh;
+    margin-bottom: 3vh;
+  }
 }
 
 .numbers {
@@ -314,6 +349,37 @@ header nav:last-child .second-row:hover {
 
 .numbers .row > div p {
   font-size: 0.74vw;
+}
+
+@media screen and (max-width: 1440px) {
+  .numbers {
+    height: 24vh;
+  }
+}
+
+@media screen and (max-width: 1110px) {
+  .numbers {
+    height: 20vh;
+    margin-bottom: 8vh;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .numbers {
+    height: 16vh;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .numbers {
+    height: 14vh;
+  }
+}
+
+@media screen and (max-width: 560px) {
+  .numbers {
+    height: 10vh;
+  }
 }
 
 .services {
@@ -391,6 +457,53 @@ header nav:last-child .second-row:hover {
   margin-bottom: 2vh;
 }
 
+@media screen and (max-width: 1292px) {
+  .services {
+    margin-top: 0;
+  }
+  .services .wrapper div p {
+    width: 20vh;
+  }
+  .services .wrapper div .small-icon {
+    margin-right: 1.5vw;
+    margin-top: 1vh;
+  }
+  .horizontal-line {
+    width: 70%;
+  }
+}
+
+@media screen and (max-width: 906px) {
+  .services .wrapper h2 {
+    margin: 0;
+    padding-bottom: 30px;
+  }
+  .services .wrapper div .small-icon {
+    margin-right: 0;
+    margin-top: 1vh;
+    width: auto;
+    height: 2vh;
+  }
+  .services .wrapper div p {
+    width: 15vh;
+  }
+}
+
+@media screen and (max-width: 725px) {
+  .services .wrapper .first,
+  .services .wrapper .second {
+    margin-left: 15%;
+  }
+}
+
+@media screen and (max-width: 548px) {
+  .services .wrapper .first > div,
+  .services .wrapper .second > div {
+    display: block;
+    margin: auto;
+  }
+}
+
 .design {
   background-image: url("./images/layer_mountains.jpg");
   background-repeat: no-repeat;
@@ -429,9 +542,42 @@ header nav:last-child .second-row:hover {
 
 .design .wrapper div img {
   display: block;
+  width: auto;
+  height: auto;
   margin: auto;
   margin-top: 4.7%;
   padding-left: 7%;
+}
+
+@media screen and (max-width: 750px) {
+  .design {
+    height: 64vh;
+    padding-top: 5vh;
+  }
+  .design .wrapper div img {
+    width: 500px;
+    height: auto;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .design {
+    height: 52vh;
+  }
+  .design .wrapper div img {
+    width: 400px;
+    height: auto;
+  }
+}
+
+@media screen and (max-width: 474px) {
+  .design {
+    height: 40vh;
+  }
+  .design .wrapper div img {
+    width: 300px;
+    height: auto;
+  }
 }
 
 .weDo {
@@ -512,7 +658,7 @@ header nav:last-child .second-row:hover {
 .weDo .wrapper .creativity .right div p {
   display: inline-block;
   color: #333333;
-  font-size: 14px;
+  font-size: 0.729vw;
   padding: 15px;
   vertical-align: middle;
 }
@@ -540,7 +686,7 @@ header nav:last-child .second-row:hover {
 .weDo .wrapper .creativity .right div:nth-child(2) p {
   padding: 0 10% 0 3.5%;
   font-style: italic;
-  font-size: 15px;
+  font-size: 0.78vw;
   line-height: 1.7;
   width: 29vw;
   margin-bottom: 2vh;
@@ -569,6 +715,20 @@ header nav:last-child .second-row:hover {
   margin: 12px 0 12px 0;
 }
 
+@media screen and (max-width: 670px) {
+  section.weDo {
+    padding-top: 0;
+    margin-bottom: 0;
+  }
+  .weDo .wrapper h2 {
+    padding-bottom: 25px;
+  }
+  .weDo .wrapper p {
+    margin-top: 0;
+    margin-bottom: 4vh;
+  }
+}
+
 .slides {
   background-color: #f8f8f8;
   padding: 3.65vw 0;
@@ -583,7 +743,7 @@ header nav:last-child .second-row:hover {
 .slides .wrapper div,
 .slides .wrapper a {
   display: inline-block;
-  font-size: 24px;
+  font-size: 1.25vw;
   line-height: 36px;
   font-style: italic;
   font-family: "Roboto", sans-serif;
@@ -606,7 +766,7 @@ header nav:last-child .second-row:hover {
 
 .slides .wrapper .third h5 {
   font-family: "Kaushan Script";
-  font-size: 24px;
+  font-size: 1.25vw;
   color: #333333;
   font-style: normal;
   position: relative;
@@ -643,6 +803,34 @@ header nav:last-child .second-row:hover {
   vertical-align: top;
 }
 
+@media screen and (max-width: 1320px) {
+  .slides .wrapper .second {
+    padding: 24px;
+  }
+  .slides .wrapper .third {
+    width: 50%;
+  }
+  .slides .wrapper .third h5::after {
+    width: 30px;
+  }
+  .slides .wrapper .third p {
+    margin-left: 0;
+  }
+}
+
+@media screen and (max-width: 990px) {
+  .slides .wrapper .second {
+    border: none;
+    padding: 4px;
+  }
+}
+
+@media screen and (max-width: 840px) {
+  .slides .wrapper .third {
+    width: 54%;
+  }
+}
+
 .ourTeam {
   margin-top: 12vh;
 }
@@ -676,7 +864,7 @@ header nav:last-child .second-row:hover {
 .ourTeam .wrapper p {
   width: 52vw;
   font-family: "Roboto", sans-serif;
-  font-size: 0.97vw;
+  font-size: 0.78vw;
   color: #999999;
   display: block;
   margin: auto;
@@ -777,16 +965,55 @@ header nav:last-child .second-row:hover {
 }
 
 .logos {
-  height: 251px;
+  height: 25.9vh;
   background: #f8f8f8;
   margin-bottom: 12vh;
 }
 
-.logos .wrapper img {
-  display: block;
-  margin: auto;
-  -webkit-transform: translateY(50%);
-          transform: translateY(50%);
+.logos .wrapper .logo-images {
+  -webkit-transform: translate(-3%, 25%);
+          transform: translate(-3%, 25%);
+}
+
+.logos .wrapper .logo-images img {
+  margin-left: 7%;
+}
+
+@media screen and (max-width: 1710px) {
+  .logos .wrapper .logo-images img {
+    margin-left: 2%;
+  }
+}
+
+@media screen and (max-width: 1123px) {
+  .logos .wrapper .logo-images {
+    -webkit-transform: translate(-3%, 50%);
+            transform: translate(-3%, 50%);
+  }
+  .logos .wrapper .logo-images img {
+    margin-left: 1%;
+    width: 110px;
+    height: 120px;
+  }
+}
+
+@media screen and (max-width: 1123px) {
+  .logos .wrapper .logo-images {
+    -webkit-transform: translate(-3%, 65%);
+            transform: translate(-3%, 65%);
+  }
+  .logos .wrapper .logo-images img {
+    margin-left: 1%;
+    width: 90px;
+    height: 100px;
+  }
+}
+
+@media screen and (max-width: 716px) {
+  .logos .wrapper .logo-images {
+    -webkit-transform: translate(-3%, 5%);
+            transform: translate(-3%, 5%);
+  }
 }
 
 .ourWorks {
@@ -820,17 +1047,10 @@ header nav:last-child .second-row:hover {
   background-color: #f38181;
 }
 
-.ourWorks .wrapper .line-red {
-  background-color: #f7adad;
-  width: 4vw;
-  height: 0.3vh;
-  margin-top: 4.02vh;
-}
-
 .ourWorks .wrapper p {
   width: 52vw;
   font-family: "Roboto", sans-serif;
-  font-size: 0.97vw;
+  font-size: 0.78vw;
   color: #999999;
   display: block;
   margin: auto;
@@ -890,7 +1110,6 @@ header nav:last-child .second-row:hover {
 
 .wallpaper .first .left-big,
 .wallpaper .second .left-big {
-  height: 100%;
   width: 50%;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -928,16 +1147,25 @@ header nav:last-child .second-row:hover {
   width: auto;
 }
 
-.wallpaper .first .overlay h3,
-.wallpaper .second .overlay h3 {
+.wallpaper .first .overlay .text,
+.wallpaper .second .overlay .text {
+  position: absolute;
+  left: 50%;
+  top: 55%;
+  -webkit-transform: translate(-50%, -5%);
+          transform: translate(-50%, -5%);
+  width: auto;
+}
+
+.wallpaper .first .overlay .text h3,
+.wallpaper .second .overlay .text h3 {
   font-size: 14px;
   font-family: "Montserrat";
   color: #ffffff;
-  margin-top: 200px;
 }
 
-.wallpaper .first .overlay h2,
-.wallpaper .second .overlay h2 {
+.wallpaper .first .overlay .text h2,
+.wallpaper .second .overlay .text h2 {
   color: #ffffff;
   font-family: "Roboto", sans-serif;
   font-size: 15px;
@@ -962,7 +1190,7 @@ header nav:last-child .second-row:hover {
 .slides2 .wrapper a,
 .slides2 .wrapper div {
   display: inline-block;
-  font-size: 24px;
+  font-size: 1.25vw;
   line-height: 36px;
   font-style: italic;
   font-family: "Roboto", sans-serif;
@@ -985,7 +1213,7 @@ header nav:last-child .second-row:hover {
 .slides2 .wrapper .third h6 {
   font-family: "Kaushan Script";
   color: black;
-  font-size: 24px;
+  font-size: 1.25vw;
   padding-left: 70px;
   padding-top: 10px;
   position: relative;
